@@ -11,7 +11,7 @@ END IF
 
 SCREEN 2, 640, 200, 3, AS_MODE_HIRES, "3D Function Plot"
 
-WINDOW 4,,, AW_FLAG_BACKDROP OR AW_FLAG_BORDERLESS, 2
+WINDOW 4,,, AW_FLAG_BACKDROP OR AW_FLAG_BORDERLESS OR AW_FLAG_ACTIVATE, 2
 
 DIM AS INTEGER wx = WINDOW ( 2 ), wy = WINDOW ( 3 ) -10
 
@@ -206,6 +206,7 @@ COLOR 1, 0
 PRINT "PRESS ANY KEY TO QUIT"
 
 WHILE INKEY$ ( ) = ""
+    SLEEP
 WEND
 
 END
