@@ -63,5 +63,6 @@ LOCATE 22, 1
 PRINT "PRESS ANY KEY TO QUIT"
 
 WHILE INKEY$ ( ) = ""
+    SLEEP
 WEND
 
