@@ -51,6 +51,7 @@ LOCATE 22,1
 PRINT "PRESS ANY KEY"
 
 WHILE INKEY$=""
+    SLEEP
 WEND
 
 WINDOW CLOSE 2
