@@ -52,7 +52,7 @@ SUB setColor ( BYVAL c AS INTEGER, BYVAL r AS SINGLE, BYVAL g AS SINGLE, BYVAL B
 END SUB
 
 SCREEN 1, 320, 200, 5, 1, "Mandelbrot Set"
-WINDOW 1,,, AW_FLAG_BORDERLESS OR AW_FLAG_BACKDROP
+WINDOW 1,,, AW_FLAG_BORDERLESS OR AW_FLAG_BACKDROP OR AW_FLAG_ACTIVATE
 
 PALETTE 0, 0, 0, 0
 PALETTE 1, 0.2, 0.2, 0.9
