@@ -451,7 +451,7 @@ REM OPEN "tetris.log" FOR OUTPUT AS 1
 REM PRINT #1, "tetris log starts"
 
 SCREEN 2, 320, 200, 3, 0, "AQB Tetris"
-WINDOW 4,,, AW_FLAG_BACKDROP OR AW_FLAG_BORDERLESS, 2
+WINDOW 4,,, AW_FLAG_BACKDROP OR AW_FLAG_BORDERLESS OR AW_FLAG_ACTIVATE OR AW_FLAG_GIMMEZEROZERO, 2
 
 PALETTE 0, 0, 0, 0 : REM black
 PALETTE 1, 0, 0, 1 : REM blue
