@@ -83,7 +83,22 @@ PUBLIC CONST AS INTEGER AE_CLOSE              = 119
 PUBLIC CONST AS INTEGER AE_MOUSE              = 120
 PUBLIC CONST AS INTEGER AE_BLIT               = 121
 
-' screen modes
+' BitMaps
+
+PUBLIC TYPE BITMAP_t
+    AS BITMAP_t PTR     prev, next
+    AS INTEGER          width, height
+    ' FIXME struct BitMap   bm
+    ' FIXME struct RastPort rp
+END TYPE
+
+PUBLIC DECLARE FUNCTION BITMAP          (BYVAL width AS INTEGER, BYVAL height AS INTEGER, BYVAL depth AS INTEGER) AS BITMAP_t PTR
+PUBLIC DECLARE SUB      BITMAP FREE     (BYVAL bm AS BITMAP_t PTR)
+PUBLIC DECLARE SUB      GET             (_COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1), BYVAL blit AS VOID PTR)
+PUBLIC DECLARE SUB      PUT             (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x AS INTEGER=-1, BYVAL y AS INTEGER=-1), BYVAL blit AS VOID PTR, BYVAL minterm AS UBYTE=&HC0, _
+                                         _COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1))
+
+' screens
 
 PUBLIC CONST AS UINTEGER AS_MODE_GENLOCK_VIDEO   = &H0002
 PUBLIC CONST AS UINTEGER AS_MODE_LACE            = &H0004
@@ -99,24 +114,37 @@ PUBLIC CONST AS UINTEGER AS_MODE_VP_HIDE         = &H2000
 PUBLIC CONST AS UINTEGER AS_MODE_SPRITES         = &H4000
 PUBLIC CONST AS UINTEGER AS_MODE_HIRES           = &H8000
 
-PUBLIC DECLARE SUB SCREEN (BYVAL id AS INTEGER, BYVAL width AS INTEGER, BYVAL height AS INTEGER, BYVAL depth AS INTEGER, BYVAL mode AS UINTEGER, BYVAL title AS STRING=NULL)
+PUBLIC DECLARE SUB SCREEN (BYVAL id AS INTEGER, BYVAL width AS INTEGER, BYVAL height AS INTEGER, BYVAL depth AS INTEGER, BYVAL mode AS UINTEGER, BYVAL title AS STRING=NULL, BYVAL bm AS BITMAP_t PTR=NULL)
 PUBLIC DECLARE SUB SCREEN CLOSE (BYVAL id AS INTEGER)
 
+' windows
 
-' window flags
-
-PUBLIC CONST AS INTEGER AW_FLAG_SIZE       =  1
-PUBLIC CONST AS INTEGER AW_FLAG_DRAG       =  2
-PUBLIC CONST AS INTEGER AW_FLAG_DEPTH      =  4
-PUBLIC CONST AS INTEGER AW_FLAG_CLOSE      =  8
-PUBLIC CONST AS INTEGER AW_FLAG_REFRESH    = 16
-PUBLIC CONST AS INTEGER AW_FLAG_BACKDROP   = 32
-PUBLIC CONST AS INTEGER AW_FLAG_BORDERLESS = 64
+PUBLIC CONST AS ULONG AW_FLAG_SIZEGADGET     = &H00000001
+PUBLIC CONST AS ULONG AW_FLAG_DRAGBAR        = &H00000002
+PUBLIC CONST AS ULONG AW_FLAG_DEPTHGADGET    = &H00000004
+PUBLIC CONST AS ULONG AW_FLAG_CLOSEGADGET    = &H00000008
+PUBLIC CONST AS ULONG AW_FLAG_SIZEBRIGHT     = &H00000010
+PUBLIC CONST AS ULONG AW_FLAG_SIZEBBOTTOM    = &H00000020
+PUBLIC CONST AS ULONG AW_FLAG_REFRESHBITS    = &H000000C0
+PUBLIC CONST AS ULONG AW_FLAG_SMART_REFRESH  = &H00000000
+PUBLIC CONST AS ULONG AW_FLAG_SIMPLE_REFRESH = &H00000040
+PUBLIC CONST AS ULONG AW_FLAG_SUPER_BITMAP   = &H00000080
+PUBLIC CONST AS ULONG AW_FLAG_OTHER_REFRESH  = &H000000C0
+PUBLIC CONST AS ULONG AW_FLAG_BACKDROP       = &H00000100
+PUBLIC CONST AS ULONG AW_FLAG_REPORTMOUSE    = &H00000200
+PUBLIC CONST AS ULONG AW_FLAG_GIMMEZEROZERO  = &H00000400
+PUBLIC CONST AS ULONG AW_FLAG_BORDERLESS     = &H00000800
+PUBLIC CONST AS ULONG AW_FLAG_ACTIVATE       = &H00001000
+PUBLIC CONST AS ULONG AW_FLAG_RMBTRAP        = &H00010000
+PUBLIC CONST AS ULONG AW_FLAG_NOCAREREFRESH  = &H00020000
+PUBLIC CONST AS ULONG AW_FLAG_NW_EXTENDED    = &H00040000
+PUBLIC CONST AS ULONG AW_FLAG_NEWLOOKMENUS   = &H00200000
 
 ' WINDOW id [, [Title] [, [(x1,y1)-(x2,y2)] [, [Flags] [, Screen] ] ]
 PUBLIC DECLARE SUB      WINDOW (BYVAL id AS INTEGER, BYVAL title AS STRING = NULL, _
                                 _COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1), _
-                                BYVAL flags AS INTEGER=15, BYVAL scrid AS INTEGER = 0)
+                                BYVAL flags AS ULONG=AW_FLAG_SIZEGADGET OR AW_FLAG_DRAGBAR OR AW_FLAG_DEPTHGADGET OR AW_FLAG_CLOSEGADGET OR AW_FLAG_SMART_REFRESH OR AW_FLAG_GIMMEZEROZERO OR AW_FLAG_ACTIVATE, _
+                                BYVAL scrid AS INTEGER = 0)
 
 PUBLIC DECLARE SUB      WINDOW CLOSE         (BYVAL id AS INTEGER = 0)
 PUBLIC DECLARE SUB      WINDOW OUTPUT        (BYVAL id AS INTEGER = 0)
@@ -158,21 +186,6 @@ END TYPE
 
 PUBLIC DECLARE SUB      PALETTE         (BYVAL cid AS INTEGER, BYVAL red AS SINGLE, BYVAL green AS SINGLE, BYVAL blue AS SINGLE)
 PUBLIC DECLARE SUB      PALETTE LOAD    (BYVAL p AS PALETTE_t PTR)
-
-' BitMaps
-
-PUBLIC TYPE BITMAP_t
-    AS BITMAP_t PTR     prev, next
-    AS INTEGER          width, height
-    ' FIXME struct BitMap   bm
-    ' FIXME struct RastPort rp
-END TYPE
-
-PUBLIC DECLARE FUNCTION BITMAP          (BYVAL width AS INTEGER, BYVAL height AS INTEGER, BYVAL depth AS INTEGER) AS BITMAP_t PTR
-PUBLIC DECLARE SUB      BITMAP FREE     (BYVAL bm AS BITMAP_t PTR)
-PUBLIC DECLARE SUB      GET             (_COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1), BYVAL blit AS VOID PTR)
-PUBLIC DECLARE SUB      PUT             (_COORD(BYVAL s AS BOOLEAN=FALSE, BYVAL x AS INTEGER=-1, BYVAL y AS INTEGER=-1), BYVAL blit AS VOID PTR, BYVAL minterm AS UBYTE=&HC0, _
-                                         _COORD2(BYVAL s1 AS BOOLEAN=FALSE, BYVAL x1 AS INTEGER=-1, BYVAL y1 AS INTEGER=-1, BYVAL s2 AS BOOLEAN=FALSE, BYVAL x2 AS INTEGER=-1, BYVAL y2 AS INTEGER=-1))
 
 PUBLIC DECLARE FUNCTION INKEY$          ()
 
