@@ -10,6 +10,8 @@ Improvements::
     * runtime: PUT instruction added
     * runtime: ALLOCATE, DEALLOCATE, _MEMSET added
     * runtime: PALETTE LOAD instruction added
+    * runtime: SCREEN/WINDOW: use original graphics/intuition flags
+    * runtime: INKEY$: no implicit sleep
     * compiler: add generic #fno syntax
 
 Bug Fixes::
